clusters/gitops-cluster/prometheus-server/svc_prometheus.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
spec:
  selector:
    app: prometheus
  ports:
    - name: http
      protocol: TCP
      port: 9090
